20031218 COPYING: add a copy of the GPL to the distribution.
20040117 rzxtool.c, scl2trd.c: stop recognised options producing two
	 error messages.
20040117 TAG: fuse-utils_0_6_2-trunk
	 BRANCH: fuse-utils_0_6_2-branch
20040117 TAG: fuse-utils_0_6_2pre1 (fuse-utils_0_6_2-branch).
20040204 man/: updates (fuse-utils_0_6_2-branch).
20040205 configure.in: bump version number to 0.6.2pre2
	 (fuse-utils_0_6_2-branch).
20040205 TAG: fuse-utils_0_6_2pre2 (fuse-utils_0_6_2-branch).
20040206 README, man/: final doc updates for the 0.6.2 release.
	 (fuse-utils_0_6_2-branch).
20040207 keys.c: change description of the Fuse key
	 (fuse-utils_0_6_2-branch).
20040211 configure.in: bump version number to 0.6.2
	 (fuse-utils_0_6_2-branch).
20040211 tzxlist.c: fix double-free bug on failed tape open
	 (fuse-utils_0_6_2-branch).
20040212 TAG: fuse-utils_0_6_2 (fuse-utils_0_6_2-branch).
20040223 Merge changes from fuse-utils_0_6_2 to HEAD.
20040223 TAG: fuse-utils_0_6_2-merge-1
20040616 acconfig.h,configure.in: remove use of acconfig.h.
20040616 .cvsignore,createhdf.c,Makefile.am: add createhdf utility for
	 creating empty .hdf files.
20040620 README,autogen.sh: add script to do the autotools invocation.
20040626 man/{Makefile.am,createhdf.1,fuse-utils.1}: add createhdf
	 manpage.
20040709 configure.in: bump version number to 0.7.0pre1.
20040709 TAG: fuse-utils_0_7_0pre1.
20040715 README,man/{createhdf.1,fuse-utils.1,listbasic.1,rzxcheck.1,
	 rzxdump.1,rzxtool.1,scl2trd.1,snap2tzx.1,snapconv.1,tapeconv.1,
	 tzxlist.1}; doc updates for 0.7.0 release.
20040715 configure.in: Use libtool to link fuse-utils
20040715 autogen.sh: copy auxiliary files rather than linking them.
20040715 .cvsignore: ignore libtool generated files.
20040716 configure.in: bump veersion umber to 0.7.0.
20040806 snapconv.c,man/snapconv.1: Add -c and -n options to snapconv that
         allow the writing of uncompressed and completely compressed snapshots.
20040906 rzxcheck.c: use new RZX signature API.